[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/entities/enemies/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/chips/chip.png" type="Texture" id=2]
[ext_resource path="res://src/entities/enemies/DamageDealer.tres" type="Material" id=3]
[ext_resource path="res://src/entities/enemies/RollChip.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 22.0

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = ExtResource( 3 )
texture = ExtResource( 2 )

[node name="RollChip" parent="." instance=ExtResource( 4 )]
playing = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Life_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Life_timer" to="." method="_on_Life_timer_timeout"]
